--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,9 @@ readme = "README.md"
 [tool.poetry.dependencies]
 python = "^3.10"
 Django = "^4.1.5"
+gunicorn = "^20.1.0"
+dj-database-url = "^1.2.0"
+whitenoise = "^6.3.0"
 
 
 [build-system]
