--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ Django = "^4.1.5"
 gunicorn = "^20.1.0"
 dj-database-url = "^1.2.0"
 whitenoise = "^6.3.0"
+pytest-cov = "^4.0.0"
 
 
 [build-system]
