--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,4 +17,5 @@ setuptools = "^67.1.0"
 
 [build-system]
 requires = ["poetry-core"]
++requires = ["setuptools", "poetry_core>=1.0"]
 build-backend = "poetry.core.masonry.api"
