--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,15 +6,16 @@ authors = ["fevse <fedulov.v.s@gmail.com>"]
 readme = "README.md"
 
 [tool.poetry.dependencies]
+setuptools = "^57.1.0"
 python = "^3.7"
 Django = "^3.2.17"
 gunicorn = "^20.1.0"
 dj-database-url = "^1.2.0"
 whitenoise = "^6.3.0"
 pytest-cov = "^4.0.0"
-setuptools = "^57.1.0"
+
 
 
 [build-system]
-requires = ["setuptools", "poetry_core>=1.0"]
+requires = ["poetry_core>=1.0"]
 build-backend = "poetry.core.masonry.api"
