--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,6 @@ authors = ["fevse <fedulov.v.s@gmail.com>"]
 readme = "README.md"
 
 [tool.poetry.dependencies]
-setuptools = "^57.1.0"
 python = "^3.7"
 Django = "^3.2.17"
 gunicorn = "^20.1.0"
@@ -15,6 +14,9 @@ whitenoise = "^6.3.0"
 pytest-cov = "^4.0.0"
 
 
+
+[tool.poetry.group.dev.dependencies]
+setuptools = "^67.1.0"
 
 [build-system]
 requires = ["poetry_core>=1.0"]
