--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,7 +12,8 @@ gunicorn = "^20.1.0"
 dj-database-url = "^1.2.0"
 whitenoise = "^6.3.0"
 pytest-cov = "^4.0.0"
+setuptools = "^67.1.0"
 
 [build-system]
-requires = ["poetry_core>=1.0"]
+requires = ["setuptools", "poetry_core>=1.0"]
 build-backend = "poetry.core.masonry.api"
