--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ dj-database-url = "^1.2.0"
 whitenoise = "^6.3.0"
 pytest-cov = "^4.0.0"
 setuptools = "^67.1.0"
+python-dotenv = "^0.21.1"
 
 [build-system]
 requires = ["setuptools", "poetry_core>=1.0"]
