--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ whitenoise = "^6.3.0"
 pytest-cov = "^4.0.0"
 setuptools = "^67.1.0"
 python-dotenv = "^0.21.1"
+psycopg2-binary = "^2.9.5"
 
 [build-system]
 requires = ["setuptools", "poetry_core>=1.0"]
